swagger almost done
